--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -41,7 +41,7 @@
 .form-submit{
   height: 35px;
   color: #fff;
-  background-color: #7ac143;
+  background-color: #FF3030;
   border: none;
   transition: 0.3s opacity ease;
   cursor: pointer;
