--- a/src/css/Feed.css
+++ b/src/css/Feed.css
@@ -25,6 +25,15 @@ font-size: 25px;
   background-color: #F1F1F1;
 }
 
+.green {
+  color: #40bf40;
+}
+#addGroup {
+  padding: 0;
+  margin: 0;
+  font-size: 30px;
+}
+
 th {
   font-size: 30px;
   text-align: center;
