--- a/src/css/Feed.css
+++ b/src/css/Feed.css
@@ -29,9 +29,11 @@ font-size: 25px;
   color: #40bf40;
 }
 #addGroup {
-  padding: 0;
-  margin: 0;
   font-size: 30px;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background: none;
 }
 
 th {
