feedbranch and some other fixes

--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -2,8 +2,8 @@
   background-image:url(../images/Salmon-NextCourse.jpg);
   opacity: 0.9;
   position:absolute;
-  height: 100%;
-  width: 100%;
+  height: 88vh;
+  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
