--- a/src/css/CreateGroup.css
+++ b/src/css/CreateGroup.css
@@ -1,9 +1,11 @@
 .StarRating {
-    font-size: 25px;
+    font-size: 20px;
 }
 
 .select-price {
-    font-size: 16px;
+    font-size: 18px;
+    display: inline;
+    float: left;
 }
 
 .name {
