play game modal working but looks ugly

--- a/src/css/Feed.css
+++ b/src/css/Feed.css
@@ -17,8 +17,9 @@
   background-color: #F1F1F1;
 }
 
-#groups-area span {
+#groups-area h4 {
 font-size: 25px;
+display: inline;
 }
 
 #recents-area {
