font and new image

--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -1,5 +1,5 @@
 .center{
-  background-image:url(../images/Salmon-NextCourse.jpg);
+  background-image:url(../images/friends-cafe.jpeg);
   opacity: 0.9;
   position:absolute;
   height: 88vh;
