--- a/src/css/About.css
+++ b/src/css/About.css
@@ -6,7 +6,9 @@
 }
 
 .mv-statement {
-  text-align: left;
+  text-align: justify;
+  margin-left: 60px;
+  margin-right: 60px;
 
 }
 
@@ -14,4 +16,11 @@
   text-align: justify;
   color: #FF3030;
   font-weight: bold;
+  margin-left: 60px;
+  margin-right: 60px;
+}
+
+.about-body {
+  margin-left: 60px;
+  margin-right: 60px;
 }
