--- a/src/css/Feed.css
+++ b/src/css/Feed.css
@@ -42,3 +42,9 @@ td {
   padding-right: 30px;
   text-align: justify;
 }
+
+.centered {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
