--- a/src/css/CreateGroup.css
+++ b/src/css/CreateGroup.css
@@ -18,7 +18,7 @@
 }
 
 .form-body {
-  background-color: #A9CCE3;
+background-image:url(../images/outdoor-seating.jpeg);
   opacity: 0.9;
   position:absolute;
   height: 100%;
